[package]
name = "yeerugina-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["debug", "display"] }
log = "0.4.28"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
doc_broken_link = "warn"
doc_comment_double_space_linebreaks = "warn"
implicit_clone = "warn"
large_types_passed_by_value = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"

[lints.rust]
ambiguous_negative_literals = "deny"
deref_into_dyn_supertrait = "deny"
elided_lifetimes_in_paths = "deny" # controversial?
explicit_outlives_requirements = "deny"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "deny"
non_ascii_idents = "deny"
#non_exhaustive_omitted_patterns = "warn"
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "deny"
unnameable_types = "deny"
unreachable_pub = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "warn"
unused_qualifications = "warn" # or allow
unused_results = "deny"
variant_size_differences = "warn"
